# c-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  db.py  docker-compose-local-db.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: celery_app.py  main.py
app/api/controller/: thread.py
app/api/models/: __init__.py  document.py
app/api/routers/: document.py  ingest.py  thread.py
app/bot/: state.py
app/bot/nodes/: __init__.py  context_eval.py  context_fetcher.py  generator.py  knowledge_refiner.py  retriever.py  router.py  summarizer.py  thread_handler.py  web_query_rewrite.py  web_search.py
app/constants/: __init__.py  constants.py  enums.py
app/core/: config.py  exception_handlers.py  logging.py
app/db/: client.py  migrate.py
app/db/models/: defaults.py  document.py  user.py
app/db/services/: base.py  chunk_service.py  document_service.py  message_service.py  thread_service.py  user_service.py
app/middlewares/: auth.py
app/models/: __init__.py  base.py  thread.py
app/rag/: __init__.py  graph.py  ingestor.py  retriever.py
app/rag/ingestor/: abstract.py  pdf_ingestor.py
app/routers/: __init__.py  health.py  ingest.py  thread.py
app/static/: app.js  index.html  style.css
app/utils/: __init__.py  excel_exporter.py
migrations/: env.py
migrations/versions/: c9c134865f58_initial_schema.py  e2ac1e0894c1_drop_message_citations_table.py
rag_core/: graph.py  ingestor.py  retiever.py  state.py  utils.py
