[tool.poetry]
name = "c-rag"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.20.0"
pydantic = { extras = ["email"], version = "^2.11.3" }
pydantic-settings = "^2.1.0"
fastapi-utils = "^0.8.0"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.0"
black = "^24.1.1"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
isort = "^6.0.1"
sqlalchemy = { extras = ["mypy"], version = "^2.0.40" }
alembic = "^1.15.2"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
